--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,17 @@ canvas {
     width: 500px;
     border: 2px solid black;
 }
+
+.playerUI {
+    display: flex;
+    justify-content: space-around;
+}
+
+.bossHealth {
+    display: flex;
+    justify-content: center;
+}
+
+.hidden {
+    display: none;
+}
