--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-image: url('../assets/images/demons-respite-background.PNG');
     background-repeat: no-repeat;
-    background-size: 45%;
+    background-size: 48%;
     background-position-x: center;
     display: flex;
     justify-content: center;
@@ -81,7 +81,12 @@ button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 110px 0 0 40px;
+    margin: 110px 0 0 20px;
+    position: absolute;
+    top: 3%;
+    right: auto;
+    left: 36.5%;
+    bottom: auto;
 }
 
 canvas {
@@ -112,18 +117,21 @@ canvas {
 
 .gameMenu {
     background-color: black;
-    height: 250px;
-    width: 300px;
+    height: 25%;
+    width: 15%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     position: absolute;
-    top: 300px;
-    left: 830px;
+    top: 30%;
+    right: auto;
+    left: 44%;
+    bottom: auto;
 }
 
 .gameMenuControlsButton, .gameMenuReturn {
     margin: 40px;
+    height: 15%;
 }
 
 .gameMenuControls {
@@ -132,8 +140,10 @@ canvas {
     flex-direction: column;
     align-items: center;
     position: absolute;
-    top: 120px;
-    left: 710px;
+    top: 12%;
+    right: auto;
+    left: 37%;
+    bottom: auto;
 }
 
 .gameMenuControlsReturn {
@@ -173,7 +183,7 @@ canvas {
     height: 500px;
     width: 600px;
     text-align: center;
-    margin: 150px 0 0 50px;
+    margin: 150px 0 0 30px;
 }
 
 #lose {
@@ -198,6 +208,28 @@ canvas {
 @media only screen and (max-width: 1200px)
 {
     body {
-        background-size: cover;
+        background-size: 95%;
+    }
+
+    .gameMenu {
+        height: 40%;
+        width: 40%;
+        position: absolute;
+        top: 23%;
+        right: auto;
+        left: 31%;
+        bottom: auto;
+    }
+
+    .gameMenuControlsButton, .gameMenuReturn {
+        height: 10%;
+    }
+
+    .gameplay {
+        position: absolute;
+        top: 3%;
+        right: auto;
+        left: 23%;
+        bottom: auto;
     }
 }
