--- a/css/style.css
+++ b/css/style.css
@@ -98,24 +98,34 @@ canvas {
 .playerUI {
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .health {
-    margin: 0 300px 20px 0;
     color: white;
+    margin: 0 20px 20px 0;
     font-size: 22px;
 }
 
 .gold {
     color: white;
+    margin: 0 0 20px 0;
     font-size: 22px;
 }
+
 
 .bossHealth {
     display: flex;
     justify-content: center;
     color: white;
     font-size: 22px;
+}
+
+.abilityCooldown {
+    background-color: pink;
+    margin: 0 280px 20px 0;
+    height: 20px;
+    width: 20px;
 }
 
 .gameMenu {
@@ -206,6 +216,10 @@ canvas {
 
 .hidden {
     display: none;
+}
+
+.cooldown {
+    background-color: black;
 }
 
 @media only screen and (max-width: 1200px)
